# tighterror

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cargo-tighterror/: Cargo.toml  README.md
crates/cargo-tighterror/src/: args.rs  main.rs
crates/tighterror-build/: Cargo.toml  README.md  tighterror.yaml
crates/tighterror-build/src/: coder.rs  errors.rs  lib.rs  linter.rs  parser.rs  spec.rs  util.rs
crates/tighterror-build/src/coder/: formatter.rs  frozen_options.rs  generator.rs  idents.rs  options.rs
crates/tighterror-build/src/coder/generator/: bits.rs  helpers.rs  module.rs  modules.rs  repr_type.rs
crates/tighterror-build/src/common/: casing.rs
crates/tighterror-build/src/linter/: toml.rs  yaml.rs
crates/tighterror-build/src/parser/: helpers.rs  kws.rs  testing.rs  toml.rs  yaml.rs
crates/tighterror-build/src/parser/toml/: test_toml_parser.rs
crates/tighterror-build/src/parser/yaml/: test_yaml_parser.rs
crates/tighterror-build/src/spec/: category.rs  definitions.rs  error.rs  main.rs  module.rs
crates/tighterror-build/tests/compilation/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/compilation/src/: lib.rs
crates/tighterror-build/tests/compilation/tests/: tests.rs
crates/tighterror-build/tests/compilation/tests/compile-fail/: negative_err_code_into_result.rs  negative_err_into_result.rs  negative_err_kind_into_result.rs  negative_error_trait.rs
crates/tighterror-build/tests/extra/: Cargo.toml
crates/tighterror-build/tests/extra/flat_kinds/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/extra/flat_kinds/src/: lib.rs
crates/tighterror-build/tests/extra/flat_kinds_toml/: Cargo.toml  tighterror.toml
crates/tighterror-build/tests/extra/flat_kinds_toml/src/: lib.rs
crates/tighterror-build/tests/extra/implicit_category/: Cargo.toml  build.rs  tighterror.yaml
crates/tighterror-build/tests/extra/implicit_category/src/: lib.rs
crates/tighterror-build/tests/extra/implicit_category_toml/: Cargo.toml  tighterror.toml
crates/tighterror-build/tests/extra/implicit_category_toml/src/: lib.rs
crates/tighterror-build/tests/extra/minimal/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/extra/minimal/src/: lib.rs
crates/tighterror-build/tests/extra/minimal_256_variants/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/extra/minimal_256_variants/src/: lib.rs
crates/tighterror-build/tests/extra/minimal_no_std/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/extra/minimal_no_std/src/: lib.rs
crates/tighterror-build/tests/extra/minimal_toml/: Cargo.toml  tighterror.toml
crates/tighterror-build/tests/extra/minimal_toml/src/: lib.rs
crates/tighterror-build/tests/extra/minimal_with_display/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/extra/minimal_with_display/src/: lib.rs
crates/tighterror-build/tests/extra/multiple_categories/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/extra/multiple_categories/src/: lib.rs
crates/tighterror-build/tests/extra/multiple_categories_toml/: Cargo.toml  build.rs  tighterror.toml
crates/tighterror-build/tests/extra/multiple_modules_toml/: Cargo.toml  tighterror.toml
crates/tighterror-build/tests/extra/multiple_modules_toml/src/: lib.rs
crates/tighterror-build/tests/implicit_category/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/implicit_category/src/: lib.rs
crates/tighterror-build/tests/implicit_category_toml/: Cargo.toml  build.rs  tighterror.toml
crates/tighterror-build/tests/implicit_category_toml/src/: lib.rs
crates/tighterror-build/tests/minimal/: Cargo.toml  build.rs  tighterror.yaml
crates/tighterror-build/tests/minimal/src/: lib.rs
crates/tighterror-build/tests/minimal_256_variants/: Cargo.toml  build.rs  tighterror.yaml
crates/tighterror-build/tests/minimal_no_std/: Cargo.toml
crates/tighterror-build/tests/minimal_toml/: Cargo.toml  build.rs
crates/tighterror-build/tests/minimal_toml/src/: lib.rs
crates/tighterror-build/tests/minimal_with_display/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/multiple_categories/: Cargo.toml  tighterror.yaml
crates/tighterror-build/tests/multiple_modules/: Cargo.toml  build.rs  tighterror.yaml
crates/tighterror-build/tests/multiple_modules/src/: lib.rs
src/: category.rs  code.rs  error.rs  kind.rs  lib.rs  location.rs  variant_type.rs
