[package]
name = "tighterror"
version = "0.0.9"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "Error representation framework with a code generator"
license = "MIT OR Apache-2.0"
keywords = ["error", "error-handling", "tighterror"]
categories = ["rust-patterns", "no-std"]
repository = "https://github.com/r-bk/tighterror"
exclude = [".git*", "Makefile.toml"]

[workspace]
members = [
    "crates/tighterror-build",
    "crates/tighterror-build/tests/implicit_category",
    "crates/cargo-tighterror",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
