[package]
name = "tighterror"
version = "0.0.13"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "A minimalistic error representation framework."
license = "MIT OR Apache-2.0"
keywords = [
    "error",
    "error-handling",
    "error-reporting",
    "tighterror",
    "no_std",
]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
repository = "https://github.com/r-bk/tighterror"
exclude = [".git*", "Makefile.toml"]

[workspace]
members = [
    "crates/tighterror-build",
    "crates/tighterror-build/tests/implicit_category",
    "crates/tighterror-build/tests/multiple_categories",
    "crates/cargo-tighterror",
]

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
