[package]
name = "tighterror-build"
version = "0.0.13"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "The tighterror code generation library."
license = "MIT OR Apache-2.0"
keywords = ["tighterror", "build"]
categories = ["development-tools", "development-tools::build-utils"]
repository = "https://github.com/r-bk/tighterror"

[features]
default = ["yaml", "toml"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]

[dependencies]
cfg-if = "1.0.0"
convert_case = "0.6.0"
log = "0.4"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
serde = "1"
serde_yaml = { version = "0.9", optional = true }
syn = { version = "2.0", default-features = false, features = ["parsing"] }
tempfile = "3.10.0"
tighterror = { path = "../..", version = "0.0.13" }
toml = { version = "0.8", optional = true }

[dev-dependencies]
env_logger = "0.11.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
