[workspace]
members = [
    "implicit_category",
    "implicit_category_toml",
    "flat_kinds",
    "flat_kinds_toml",
    "minimal",
    "minimal_256_variants",
    "minimal_no_std",
    "minimal_toml",
    "minimal_with_display",
    "multiple_categories",
    "multiple_categories_toml",
    "multiple_modules_toml",
]
resolver = "2"
